chapter6/pingpong_logoutput/log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-hash
          emptyDir: {}
        - name: info-file
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: hash-generator
          image: HASH_GENERATOR
          volumeMounts:
            - name: shared-hash
              mountPath: /app/files
          resources:
            limits:
              cpu: "100m"
              memory: "150Mi"
            requests:
              cpu: "10m"
              memory: "50Mi"
        - name: hash-outputter
          image: HASH_OUTPUTTER
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /readyz
              port: 3000
          resources:
            limits:
              cpu: "100m"
              memory: "150Mi"
            requests:
              cpu: "10m"
              memory: "50Mi"
          volumeMounts:
            - name: shared-hash
              mountPath: /app/files/hash-file
            - name: info-file
              mountPath: /app/files/info-file
